@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Thu Aug 11 22:25:00 CEST 2005
+ * Fri Aug 12 14:29:16 CEST 2005
  *
  *****************************************************************************/
 
@@ -17,14 +17,13 @@ namespace Mono.Cecil.Metadata {
 
 	using System;
 	using System.Collections;
-	using IO = System.IO;
 
 	using Mono.Cecil.Binary;
 
 	internal sealed class MetadataRowWriter : BaseMetadataRowVisitor {
 
 		private MetadataRoot m_root;
-		private IO.BinaryWriter m_binaryWriter;
+		private MemoryBinaryWriter m_binaryWriter;
 		private IDictionary m_ciCache;
 
 		private int m_blobHeapIdxSz;
