@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Mon Aug 08 18:08:51 CEST 2005
+ * Fri Aug 12 14:31:28 CEST 2005
  *
  *****************************************************************************/
 
@@ -17,16 +17,17 @@ namespace Mono.Cecil.Metadata {
 
 	using System;
 	using System.Collections;
-	using System.IO;
+
+	using Mono.Cecil.Binary;
 
 	internal sealed class MetadataTableWriter : BaseMetadataTableVisitor {
 
 		private MetadataRoot m_root;
 		private TablesHeap m_heap;
 		private MetadataRowWriter m_mrrw;
-		private BinaryWriter m_binaryWriter;
+		private MemoryBinaryWriter m_binaryWriter;
 
-		public MetadataTableWriter (MetadataWriter mrv, BinaryWriter writer)
+		public MetadataTableWriter (MetadataWriter mrv, MemoryBinaryWriter writer)
 		{
 			m_root = mrv.GetMetadataRoot ();
 			m_heap = m_root.Streams.TablesHeap;
@@ -44,7 +45,7 @@ namespace Mono.Cecil.Metadata {
 			return m_mrrw;
 		}
 
-		public BinaryWriter GetWriter ()
+		public MemoryBinaryWriter GetWriter ()
 		{
 			return m_binaryWriter;
 		}
